--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "vite": "^2.5.1"
   },
   "dependencies": {
-    "jquery": "^3.6.0",
-    "@types/jquery": "^3.6."
+    "jquery": "^3.5.1",
+    "@types/jquery": "^3.5.1"
   }
 }
